<resources>
    <string name="app_name">"Taller_Reposicion "</string>
    <string name="txt1">James Wilson</string>
    <string name="txt2">Posted</string>
    <string name="txt3">2h</string>
    <string name="txt4">2K</string>
    <string name="txt5">98</string>
    <string name="txt6">69</string>
    <string name="txt7">Elleana Kenn</string>
    <string name="txt8">shared</string>
    <string name="txt9">3h</string>
    <string name="txt10">3K</string>
    <string name="txt11">60</string>
    <string name="txt12">86</string>
</resources>
