<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.i034114.taller_reposicion.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/rl_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profile1"/>

                    <RelativeLayout
                        android:id="@+id/rl_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img_1">

                        <TextView
                            android:id="@+id/text_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt1"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/text_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt2"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_below="@id/text_1"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        >

                        <ImageView
                            android:id="@+id/img_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_reloj_48"/>
                        <TextView
                            android:id="@+id/text_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt3"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_2"/>



                    </RelativeLayout>



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imagen1"
                        android:layout_centerInParent="true"/>



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_4">
                    
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_corazones_48"/>
                        <TextView
                            android:id="@+id/text_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt4"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_3"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_respuesta_48"/>
                        <TextView
                            android:id="@+id/text_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt5"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_4"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_compartir_48"/>
                        <TextView
                            android:id="@+id/text_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt6"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_5"/>

                    </RelativeLayout>





                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/rl_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profile2"/>

                    <RelativeLayout
                        android:id="@+id/rl_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img_6">

                        <TextView
                            android:id="@+id/text_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt7"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/text_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt8"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_below="@id/text_7"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        >

                        <ImageView
                            android:id="@+id/img_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_reloj_48"/>
                        <TextView
                            android:id="@+id/text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt9"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_7"/>



                    </RelativeLayout>



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_6">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imagen2"
                        android:layout_centerInParent="true"/>



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_9">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_corazones_48"/>
                        <TextView
                            android:id="@+id/text_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt10"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_9"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_respuesta_48"/>
                        <TextView
                            android:id="@+id/text_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt11"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_10"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/img_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icons8_compartir_48"/>
                        <TextView
                            android:id="@+id/text_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt12"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_toRightOf="@id/img_11"/>

                    </RelativeLayout>





                </RelativeLayout>


            </RelativeLayout>




        </LinearLayout>

    </ScrollView>



</RelativeLayout>

